--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,3 +1,3 @@
 PORT = 4000
-MONGO_URI = mongodb+srv://teamabella:Dreambig060420@cluster0.yulmzde.mongodb.net/tours_booking?retryWrites=true&w=majority
-JWT_SECRET_KEY = hasldkjbaskbuiuh2JHKaDJGaSDjjhabdhjgafdakdf
+MONGO_URI = // ur mongodb database url
+JWT_SECRET_KEY = //any key
